--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,16 @@ compiler:
   - clang
 notifications:
   email: true
+env:
+    - JULIAVERSION="julianightlies"
+    - JULIAVERSION="juliareleases"
 before_install:
   - sudo add-apt-repository ppa:staticfloat/julia-deps -y
-  - sudo add-apt-repository ppa:staticfloat/julianightlies -y
+  - sudo add-apt-repository ppa:staticfloat/$JULIAVERSION -y
   - sudo apt-get update -qq -y
   - sudo apt-get install libpcre3-dev julia -y
 script:
-  - julia -e 'Pkg.init(); run(`ln -s $(pwd()) $(Pkg.dir("AudioIO"))`); Pkg.pin("AudioIO"); Pkg.resolve(); Pkg.add("BinDeps"); Pkg.build("AudioIO"); Pkg.test("AudioIO")'
+  - julia -e 'Pkg.init()'
+  - julia -e 'run(`ln -s $(pwd()) $(Pkg.dir("AudioIO"))`)'
+  - julia -e 'Pkg.pin("AudioIO"); Pkg.resolve(); Pkg.build("AudioIO")'
+  - julia -e 'Pkg.test("AudioIO")'
