--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ script:
   - julia -e 'run(`ln -s $(pwd()) $(Pkg.dir("AudioIO"))`)'
   - julia -e 'Pkg.pin("AudioIO"); Pkg.resolve(); Pkg.build("AudioIO")'
   - if [ $JULIAVERSION = "julianightlies" ]; then julia -e 'Pkg.test("AudioIO")'; fi
-  - if [ $JULIAVERSION = "juliareleases" ]; then julia test/runtests.jl; fi
+  - if [ $JULIAVERSION = "juliareleases" ]; then julia -e 'Pkg.add("FactCheck")'; julia test/runtests.jl; fi
