--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ notifications:
   email: true
 env:
     - JULIAVERSION="julianightlies"
-    - JULIAVERSION="juliareleases"
+#    - JULIAVERSION="juliareleases"
 before_install:
   - sudo add-apt-repository ppa:staticfloat/julia-deps -y
   - sudo add-apt-repository ppa:staticfloat/$JULIAVERSION -y
