fixes to work with new support in Homebrew.jl for libsndfile and portaudio

--- a/deps/src/Makefile
+++ b/deps/src/Makefile
@@ -19,6 +19,10 @@ CFLAGS =-g
 LIBS =-L/usr/local/lib -lportaudio
 LINUX_LIBS =-lrt
 LINUX_LDFLAGS =-rdynamic
+# add the Homebrew.jl tree to the include dirs in case we used it for
+# portaudio and libsndfile
+DARWIN_LDFLAGS =-L../../../Homebrew/deps/usr/lib
+DARWIN_INC =-I../../../Homebrew/deps/usr/include
 
 OBJS = shim.o
 
@@ -33,10 +37,13 @@ ifeq ($(OS), WINNT)
   SHLIB_EXT = dll
 else ifeq ($(OS), Darwin)
   SHLIB_EXT = dylib
+  INC += $(DARWIN_INC)
+  LDFLAGS += $(DARWIN_LDFLAGS)
 else
   LIBS += $(LINUX_LIBS)
   LDFLAGS += $(LINUX_LDFLAGS)
   SHLIB_EXT = so
+  INC += $(LINUX_INC)
 endif
 
 default: libportaudio_shim.$(SHLIB_EXT)
