--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,7 @@ before_install:
 script:
   - julia -e 'Pkg.init()'
   - julia -e 'Pkg.add("BinDeps"); Pkg.checkout("BinDeps")' # latest master needed for Pacman support
-  - julia -e 'run(`ln -s $(pwd()) $(Pkg.dir("AudioIO"))`)'
-  - julia -e 'Pkg.pin("AudioIO"); Pkg.resolve(); Pkg.build("AudioIO")'
+  - julia -e 'Pkg.clone(pwd()); Pkg.build("AudioIO")'
   - julia -e 'Pkg.test("AudioIO", coverage=true)'
 after_success:
 - if [ $JULIAVERSION = "juliareleases" ]; then julia -e 'cd(Pkg.dir("AudioIO")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'; fi
