--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,14 @@ language: julia
 os:
   - linux
   - osx
-sudo: required
+# sudo: required
 julia:
   # - release
   - 0.4
-  - nightly
+  - 0.5
 notifications:
   email: false
 script:
- # SampledSignals is unregistered so clone it for testing
- - julia -e 'Pkg.clone("https://github.com/JuliaAudio/SampledSignals.jl.git")'
+  # we can't actually run on travis, so just make sure it's installable
  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
- - julia -e 'Pkg.clone(pwd()); Pkg.build("PortAudio"); Pkg.test("PortAudio"; coverage=true)'
-after_success:
-  - julia -e 'cd(Pkg.dir("PortAudio")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
+ - julia -e 'Pkg.clone(pwd()); Pkg.build("PortAudio"); using PortAudio'
