--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,7 +28,7 @@ build_script:
 # Need to convert from shallow to complete for Pkg.clone to work
   - IF EXIST .git\shallow (git fetch --unshallow)
   - C:\projects\julia\bin\julia -e "versioninfo();
-      Pkg.clone(pwd(), \"PortAudio\"); Pkg.build(\"PortAudio\"); Pkg.checkout(\"Compat\")"
+      Pkg.clone(pwd(), \"PortAudio\"); Pkg.build(\"PortAudio\"); Pkg.checkout(\"Compat\"); Pkg.checkout(\"RingBuffers\")"
 
 test_script:
   # can't actually run the test, so just make sure it's installable
