--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ notifications:
 script:
   # we can't actually run on travis, so just make sure it's installable
  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
- - julia -e 'Pkg.clone(pwd()); Pkg.build("PortAudio"); Pkg.checkout("Compat"); Pkg.checkout("RingBuffers"); using PortAudio'
+ - julia -e 'Pkg.clone(pwd()); Pkg.build("PortAudio"); Pkg.checkout("Compat"); Pkg.checkout("RingBuffers"); Pkg.checkout("SampledSignals"); using PortAudio'
