updating dependencies now that more of them are tagged

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ os:
   - osx
 sudo: required
 julia:
-  # - release
   - 0.4
   - 0.5
 notifications:
@@ -13,4 +12,4 @@ notifications:
 script:
   # we can't actually run on travis, so just make sure it's installable
  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
- - julia -e 'Pkg.clone(pwd()); Pkg.build("PortAudio"); Pkg.checkout("Compat"); Pkg.checkout("RingBuffers"); Pkg.checkout("SampledSignals"); using PortAudio'
+ - julia -e 'Pkg.clone(pwd()); Pkg.build("PortAudio"); using PortAudio'
