--- a/deps/src/Makefile
+++ b/deps/src/Makefile
@@ -1,68 +1,80 @@
-# Makefile lifted from Clang.jl
+# Makefile originally lifted from Clang.jl
 # Copyright (c) 2012-: Isaiah Norton and [contributors](https://github.com/ihnorton/Clang.jl/graphs/contributors)
 
 ifeq (exists, $(shell [ -e Make.user ] && echo exists ))
 include Make.user
 endif
 
-TARGETDIR = ../usr/lib
+TARGETDIR=../usr/lib
+TARGETBASENAME=pa_shim
 OBJS = pa_shim.o
 
-# Figure out OS and architecture
-OS=$(shell uname)
-ifneq (,$(findstring MINGW,$(OS)))
-  OS=WINNT
+# check to see if the user passed in a HOST variable for cross-compiling
+ifeq ($(HOST),)
+	# Figure out OS and architecture
+	OS=$(shell uname)
+	ifneq ($(findstring MINGW,$(OS)),)
+		OS=WINNT
+	endif
+else
+	HOSTSUFFIX=_$(HOST)
+	ifneq ($(findstring linux,$(HOST)),)
+		OS=Linux
+	else ifneq ($(findstring darwin,$(HOST)),)
+		OS=Darwin
+	else ifneq ($(findstring mingw,$(HOST)),)
+		OS=WINNT
+	endif
 endif
 
-# file extensions and platform-specific libs
+CFLAGS = -Wall -Wno-strict-aliasing -fno-omit-frame-pointer -I../../../RingBuffers/deps/src
+LDFLAGS +=
+
 ifeq ($(OS), WINNT)
-  LIBS +=
-  LDFLAGS += -shared -L../../../RingBuffers/deps/usr/lib -lpa_ringbuffer
-  INC +=
-  SHACMD = sha256sum
-  SHLIB_EXT = dll
+	LIBS +=
+	LDFLAGS += -shared -L../../../RingBuffers/deps/usr/lib -lpa_ringbuffer$(HOSTSUFFIX)
+	INC +=
+	SHACMD = sha256sum
+	SHLIB_EXT = dll
 else ifeq ($(OS), Darwin)
-  LIBS +=
-  INC +=
-# we'll rely on Julia to load RingBuffers.jl, which will in turn load the C
-# library that we depend on for these symbols
-  LDFLAGS += -dynamiclib -Wl,-undefined,dynamic_lookup
-  SHLIB_EXT = dylib
-  SHACMD = shasum -a256
+	LIBS +=
+	INC +=
+	# we'll rely on Julia to load RingBuffers.jl, which will in turn load the C
+	# library that we depend on for these symbols
+	LDFLAGS += -dynamiclib -Wl,-undefined,dynamic_lookup
+	SHLIB_EXT = dylib
+	SHACMD = shasum -a256
 else
-  LIBS +=
-  INC +=
-  LDFLAGS += -shared
-  SHLIB_EXT = so
-  SHACMD = sha256sum
+	CFLAGS += -fPIC
+	LIBS +=
+	INC +=
+	LDFLAGS += -shared
+	SHLIB_EXT = so
+	SHACMD = sha256sum
 endif
 
 SOURCEHASH = $(shell $(SHACMD) pa_shim.c | awk '{print $$1}')
+CFLAGS += -DSOURCEHASH=\"$(SOURCEHASH)\"
 
-CFLAGS += -I../../../RingBuffers/deps/src -Wall -Wno-strict-aliasing -fno-omit-frame-pointer -fPIC -DSOURCEHASH=\"$(SOURCEHASH)\"
-LDFLAGS +=
-# LINUX_LIBS =-lrt
-# LINUX_LDFLAGS =-rdynamic
-# add the Homebrew.jl tree to the include dirs in case we used it for
-# portaudio and libsndfile
-# DARWIN_LDFLAGS =-L../../../Homebrew/deps/usr/lib
-# DARWIN_INC =-I../../../Homebrew/deps/usr/include
+TARGET=$(TARGETDIR)/$(TARGETBASENAME)$(HOSTSUFFIX).$(SHLIB_EXT)
 
-TARGET = $(TARGETDIR)/pa_shim.$(SHLIB_EXT)
-
-.PHONY: clean default
+.PHONY: clean cleantemp default
 
 default: $(TARGET)
 
 %.o: %.c Makefile
-	$(CC) $< -fPIC -c -o $@ $(INC) $(CFLAGS)
+	$(CC) $< -c -o $@ $(INC) $(CFLAGS)
 
 $(TARGETDIR):
 	mkdir -p $@
 
 $(TARGET): $(OBJS) $(TARGETDIR) Makefile
-	$(CC) $(OBJS) -shared -o $@ $(LDFLAGS) $(LIBS)
+	$(CC) $(OBJS) $(LDFLAGS) -o $@ $(LIBS)
 
-clean:
+cleantemp:
 	rm -f $(OBJS)
-	rm -f $(TARGET)
+
+clean: cleantemp
+	rm -f $(TARGETDIR)/$(TARGETBASENAME)*.so
+	rm -f $(TARGETDIR)/$(TARGETBASENAME)*.dylib
+	rm -f $(TARGETDIR)/$(TARGETBASENAME)*.dll
