now actuall test on CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,5 @@ julia:
 notifications:
   email: false
 script:
-  # we can't actually run on travis, so just make sure it's installable
  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
- - julia -e 'Pkg.clone(pwd()); Pkg.build("PortAudio"); using PortAudio'
+ - julia -e 'Pkg.clone(pwd()); Pkg.build("PortAudio"); Pkg.test("PortAudio")'
