--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,5 +24,4 @@ build_script:
       Pkg.clone(pwd(), \"PortAudio\"); Pkg.build(\"PortAudio\")"
 
 test_script:
-  # can't actually run the test, so just make sure it's installable
-  - C:\projects\julia\bin\julia -e "using PortAudio"
+  - C:\projects\julia\bin\julia --check-bounds=yes -e "Pkg.test(\"PortAudio\")"
