--- a/.travis.yml
+++ b/.travis.yml
@@ -3,27 +3,14 @@ language: julia
 os:
   - linux
   - osx
-sudo: required
 julia:
-  - 1.0
-  - 1.2
+  - 1
   - nightly
 matrix:
   allow_failures:
     - julia: nightly
   fast_finish: true
-branches:
-  only:
-    master
 notifications:
-  email: false
-script:
- - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
- - julia --color=yes ci_setup.jl
- - julia --color=yes --code-coverage test/runtests.jl
+  email: true
 after_success:
-  - julia -e 'VERSION >= v"0.7.0-" && using Pkg;
-        VERSION < v"0.7.0-" && cd(Pkg.dir("PortAudio"));
-        Pkg.add("Coverage");
-        using Coverage;
-        Codecov.submit(process_folder())'
+  - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
