--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ repo = "https://github.com/JuliaAudio/PortAudio.jl.git"
 version = "1.1.0"
 
 [deps]
+alsa_plugins_jll = "5ac2f6bb-493e-5871-9171-112d4c21a6e7"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 SampledSignals = "bd7594eb-a658-542f-9e75-4c4d8908c167"
@@ -11,6 +12,7 @@ libportaudio_jll = "2d7b7beb-0762-5160-978e-1ab83a1e8a31"
 
 [compat]
 julia = "1.3"
+alsa_plugins_jll = "1.2.2"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
