--- a/Project.toml
+++ b/Project.toml
@@ -4,17 +4,17 @@ repo = "https://github.com/JuliaAudio/PortAudio.jl.git"
 version = "1.1.0"
 
 [deps]
-Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
+libportaudio_jll = "2d7b7beb-0762-5160-978e-1ab83a1e8a31"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 SampledSignals = "bd7594eb-a658-542f-9e75-4c4d8908c167"
-libportaudio_jll = "2d7b7beb-0762-5160-978e-1ab83a1e8a31"
 
 [compat]
 julia = "1.3"
+libportaudio_jll = "19.6.0"
+SampledSignals = "2.1.1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-TestSetExtensions = "98d24dd4-01ad-11ea-1b02-c9a08f80db04"
 
 [targets]
-test = ["Test", "TestSetExtensions"]
+test = ["Test"]
