--- a/Project.toml
+++ b/Project.toml
@@ -7,11 +7,13 @@ version = "1.1.1"
 libportaudio_jll = "2d7b7beb-0762-5160-978e-1ab83a1e8a31"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 SampledSignals = "bd7594eb-a658-542f-9e75-4c4d8908c167"
+Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
 
 [compat]
 julia = "1.3"
 libportaudio_jll = "19.6.0"
 SampledSignals = "2.1.1"
+Suppressor = "0.2.0"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
