--- a/Project.toml
+++ b/Project.toml
@@ -16,7 +16,8 @@ SampledSignals = "2.1.1"
 Suppressor = "0.2.0"
 
 [extras]
+Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Logging", "Test"]
