--- a/Project.toml
+++ b/Project.toml
@@ -15,11 +15,11 @@ julia = "1.3"
 alsa_plugins_jll = "1.2.2"
 libportaudio_jll = "19.6.0"
 SampledSignals = "2.1.1"
-Suppressor = "0.2.0"
 
 [extras]
-Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+LibSndFile = "b13ce0c6-77b0-50c6-a2db-140568b8d1a5"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Logging", "Test"]
+test = ["Documenter", "LibSndFile", "Test"]
